2009-09-11  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/field.py:
	Web: Don't generate table of contents at the top of StructuredText fields..

2009-09-10  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Fix clendar widget display after recent regression..

2009-09-08  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	* resources/scripts/pytis.js:
	Added support for radio buttons in web forms..

2009-09-08  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Ensure form id id a valid HTML identifier in web forms..

2009-09-08  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Pass type kwargs to the constructor of virtual field default type..

2009-09-07  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	* resources/scripts/pytis.js:
	AJAX response generation moved from Wiking adding support for runtime filters and few fixes..

2009-09-04  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Allow codebook insert in menu module selection..

2009-09-04  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Fix menu construction in the default implementation..

2009-09-04  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Set default `uid' value for the default implementation of CMS Users module..

2009-09-03  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/application.py:
	Fix DB connection display in application window title when using local DB connections..

2009-09-03  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/application.py:
	Work around changed wx release number constant in *some* wx 2.8 versions..

2009-09-02  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Web: Remember the last selected BrowseForm filter using a cookie..

2009-09-02  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Catch connection error in _postgresql_rollback_transaction of dbapi.
