@@ -1,5 +1,10 @@
 2009-09-11  Tomas Cerha  <cerha@brailcom.org>
 
+	* lib/pytis/web/form.py:
+	Web: Use `row-style' CSS class names also in list layout..
+
+2009-09-11  Tomas Cerha  <cerha@brailcom.org>
+
 	* lib/pytis/web/field.py:
 	Web: Don't generate table of contents at the top of StructuredText fields..
 
